Fix .ch on HTMLTableRowElement and some friends. Checkin for Fabian Guisset (hidday@geocities.com) b=75667 r=sicking sr=jst