content/html/content/src/nsHTMLTableSectionElement.cpp
@@ -172,7 +172,7 @@ nsHTMLTableSectionElement::CloneNode(PRBool aDeep, nsIDOMNode** aReturn)
 
 NS_IMPL_STRING_ATTR(nsHTMLTableSectionElement, Align, align)
 NS_IMPL_STRING_ATTR(nsHTMLTableSectionElement, VAlign, valign)
-NS_IMPL_STRING_ATTR(nsHTMLTableSectionElement, Ch, ch)
+NS_IMPL_STRING_ATTR(nsHTMLTableSectionElement, Ch, _char)
 NS_IMPL_STRING_ATTR(nsHTMLTableSectionElement, ChOff, charoff)
 
 
